<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rating_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        
        <ImageView
            android:id="@+id/iv_path"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:paddingStart="11dp"
            android:paddingEnd="11dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:srcCompat="@drawable/ic_path"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            tools:ignore="KeyboardInaccessibleWidget,NewApi,VectorDrawableCompat"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/iv_path" />

        <TextView
            android:id="@+id/tv_title"
            android:text="@string/rating"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:lineHeight="22.5dp"
            android:fontFamily="@font/lexend_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/iv_path"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:targetApi="p"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/tv_star"
            android:text="@string/_4_2"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:lineHeight="22.5dp"
            android:fontFamily="@font/lexend_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@id/iv_star"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:targetApi="p"/>

        <ImageView
            android:id="@+id/iv_star"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_star"
            android:layout_marginTop="12dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="17dp"
            tools:ignore="RtlCompat"
            android:contentDescription="@string/iv_star" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/rating_toolbar"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlCompat"/>



</androidx.constraintlayout.widget.ConstraintLayout>