<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="98dp"
    android:background="@drawable/custom_line"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/all"
        android:layout_width="107dp"
        android:layout_height="38dp"
        android:background="@drawable/custom_category"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlCompat">

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:lineHeight="15dp"
            android:text="@string/all"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/lexend_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="49dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp"
            tools:targetApi="p"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_all_amount"
            android:layout_width="22dp"
            android:layout_height="15dp"
            android:text="@string/all_amount"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:lineHeight="15dp"
            android:fontFamily="@font/lexend_regular"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="19dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="45dp"
            android:gravity="center"
            tools:targetApi="p"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/comment"
        android:layout_width="107dp"
        android:layout_height="38dp"
        android:background="@drawable/custom_category"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/all"
        android:layout_marginStart="4dp"
        tools:ignore="RtlCompat">

        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="56dp"
            android:layout_height="15dp"
            android:lineHeight="15dp"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/lexend_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="49dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp"
            tools:targetApi="p"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_comment_amount"
            android:layout_width="22dp"
            android:layout_height="15dp"
            android:text="@string/comment_amount"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:lineHeight="15dp"
            android:fontFamily="@font/lexend_regular"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="19dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="45dp"
            android:gravity="center"
            tools:targetApi="p"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/media"
        android:layout_width="107dp"
        android:layout_height="38dp"
        android:background="@drawable/custom_category"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/comment"
        android:layout_marginStart="3dp"
        tools:ignore="RtlCompat">

        <TextView
            android:id="@+id/tv_media"
            android:layout_width="36dp"
            android:layout_height="15dp"
            android:lineHeight="15dp"
            android:text="@string/media"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/lexend_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="49dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp"
            tools:targetApi="p"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_media_amount"
            android:layout_width="22dp"
            android:layout_height="15dp"
            android:text="@string/media_amount"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:lineHeight="15dp"
            android:fontFamily="@font/lexend_regular"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="19dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="45dp"
            android:gravity="center"
            tools:targetApi="p"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/five_star"
        android:layout_width="62.4dp"
        android:layout_height="38dp"
        android:background="@drawable/custom_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        tools:ignore="RtlCompat">

        <RatingBar
            android:id="@+id/rb_rating_star_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomRatingBar"
            android:numStars="5"
            android:stepSize="0.01"
            android:isIndicator="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="22dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="8dp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_five_star_amount"
            android:layout_width="16dp"
            android:layout_height="15dp"
            android:text="@string/amount"
            android:textSize="12sp"
            android:lineHeight="15dp"
            android:textColor="#1A1A1A"
            android:gravity="center"
            android:fontFamily="@font/lexend_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="24dp"
            tools:targetApi="p"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/four_star"
        android:layout_width="62.4dp"
        android:layout_height="38dp"
        android:background="@drawable/custom_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/five_star"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        tools:ignore="RtlCompat">

        <RatingBar
            android:id="@+id/rb_rating_star_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomRatingBar"
            android:numStars="5"
            android:stepSize="0.01"
            android:isIndicator="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="22dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="8dp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_four_star_amount"
            android:layout_width="16dp"
            android:layout_height="15dp"
            android:text="@string/amount"
            android:textSize="12sp"
            android:lineHeight="15dp"
            android:textColor="#1A1A1A"
            android:gravity="center"
            android:fontFamily="@font/lexend_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="24dp"
            tools:targetApi="p"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/three_star"
        android:layout_width="62.4dp"
        android:layout_height="38dp"
        android:background="@drawable/custom_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/four_star"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        tools:ignore="RtlCompat">

        <RatingBar
            android:id="@+id/rb_rating_star_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomRatingBar"
            android:numStars="5"
            android:stepSize="0.01"
            android:isIndicator="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="22dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="8dp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_three_star_amount"
            android:layout_width="16dp"
            android:layout_height="15dp"
            android:text="@string/amount"
            android:textSize="12sp"
            android:lineHeight="15dp"
            android:textColor="#1A1A1A"
            android:gravity="center"
            android:fontFamily="@font/lexend_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="24dp"
            tools:targetApi="p"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/two_star"
        android:layout_width="62.4dp"
        android:layout_height="38dp"
        android:background="@drawable/custom_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/three_star"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        tools:ignore="RtlCompat">

        <RatingBar
            android:id="@+id/rb_rating_star_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomRatingBar"
            android:numStars="5"
            android:stepSize="0.01"
            android:isIndicator="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="22dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="8dp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_two_star_amount"
            android:layout_width="16dp"
            android:layout_height="15dp"
            android:text="@string/amount"
            android:textSize="12sp"
            android:lineHeight="15dp"
            android:textColor="#1A1A1A"
            android:gravity="center"
            android:fontFamily="@font/lexend_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="24dp"
            tools:targetApi="p"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/one_star"
        android:layout_width="62.4dp"
        android:layout_height="38dp"
        android:background="@drawable/custom_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/two_star"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        tools:ignore="RtlCompat">

        <RatingBar
            android:id="@+id/rb_rating_star_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/CustomRatingBar"
            android:numStars="5"
            android:stepSize="0.01"
            android:isIndicator="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="22dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="8dp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tv_one_star_amount"
            android:layout_width="16dp"
            android:layout_height="15dp"
            android:text="@string/amount"
            android:textSize="12sp"
            android:lineHeight="15dp"
            android:textColor="#1A1A1A"
            android:gravity="center"
            android:fontFamily="@font/lexend_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="24dp"
            tools:targetApi="p"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>